need to improve

--- a/src/components/projects/projects.scss
+++ b/src/components/projects/projects.scss
@@ -47,6 +47,11 @@
                 object-fit: cover;
             }
 
+            img:hover {
+                width: 103%;
+                height: 103%;
+            }
+
         }
 
         .textContainer {
