--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -1,8 +1,41 @@
 .about {
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+    text-align: center;
+
     h1 {
+        margin-top: 20px;
+        padding: 30px;
         display: flex;
         align-items: center;
         justify-content: center;
-        font-size: 60px;
+        font-size: 70px;
+
+    }
+
+    img {
+        width: 25%;
+        height: 25%;
+        margin: auto;
+        display: block;
+        border-radius: 50%;
+        border: 1px solid;
+    }
+
+    img:hover {
+        width: 28%;
+        height: 28%;
+    }
+
+    p {
+        margin-top: 30px;
+        font-size: 20px;
+    }
+
+    h2 {
+        font-size: 50px;
+        padding: 30px;
+        color: sandybrown;
     }
 }
