--- a/src/components/resume/resume.scss
+++ b/src/components/resume/resume.scss
@@ -1,5 +1,6 @@
 .resume {
     h1 {
+        padding: 10px;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -14,8 +15,13 @@
         overflow: hidden;
 
         img {
-            width: 40%;
-            height: 40%;
+            width: 38%;
+            height: 38%;
+        }
+
+        img:hover {
+            width: 42%;
+            height: 42%;
         }
     }
 }
