--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -1,3 +1,5 @@
+@import "../../app.scss"; // import mobile style 
+
 .about {
     margin: 0px;
     padding: 0px;
@@ -11,6 +13,12 @@
         align-items: center;
         justify-content: center;
         font-size: 70px;
+
+        @include mobile {
+            font-size: 40px;
+            text-align: center;
+        }
+
 
     }
 
@@ -31,11 +39,22 @@
     p {
         margin-top: 30px;
         font-size: 20px;
+
+        @include mobile {
+            font-size: 9px;
+            text-align: center;
+        }
     }
 
     h2 {
         font-size: 50px;
         padding: 30px;
         color: sandybrown;
+
+        @include mobile {
+            font-size: 30px;
+            align-items: center;
+            text-align: center;
+        }
     }
 }
