--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -1,3 +1,5 @@
+@import "../../app.scss"; // import mobile style 
+
 .contact {
     height: 100%;
     max-width: 1366px;
@@ -6,28 +8,49 @@
     align-items: center;
     gap: 50px;
 
+    @include mobile {
+        width: 100%;
+        padding: 10px;
+        flex-direction: column;
+    }
+
     .textContainer {
         flex: 1;
         display: flex;
         flex-direction: column;
         gap: 40px;
 
+        @include mobile {
+            gap: 20px;
+            text-align: center;
+            align-items: center;
+            margin-top: 70px;
+        }
+
         h1 {
             font-size: 100px;
             line-height: 88px;
+
+            @include mobile {
+                font-size: 36px;
+            }
         }
 
         span {
             font-weight: 300;
         }
 
-        ;
 
     }
 
     .formContainer {
         flex: 1;
         position: relative;
+
+        @include mobile {
+            padding: 50px;
+            width: 100%;
+        }
 
         .phoneSvg {
             stroke: orange;
@@ -48,6 +71,10 @@
                 border: 1px solid gray;
                 color: gray;
                 border-radius: 5px;
+
+                @include mobile {
+                    padding: 10px;
+                }
             }
 
             button {
@@ -55,6 +82,10 @@
                 border: none;
                 background-color: orange;
                 cursor: pointer;
+
+                @include mobile {
+                    padding: 10px;
+                }
             }
         }
     }
