--- a/src/components/parallax/parallax.scss
+++ b/src/components/parallax/parallax.scss
@@ -1,3 +1,5 @@
+@import "../../app.scss"; // import mobile style 
+
 .parallax {
     width: 100%;
     height: 100%;
@@ -10,6 +12,11 @@
     h1 {
         font-size: 100px;
 
+        @include mobile {
+            font-size: 40px;
+            text-align: center;
+        }
+
     }
 
     .monitor {
@@ -18,11 +25,20 @@
         img {
             width: 400px;
             height: 400px;
+
+
+            @include mobile {
+                height: 20%;
+                width: 40%;
+                gap: 20px;
+                align-items: center;
+            }
         }
 
         position: absolute;
         left: 2;
         z-index: 1;
+
     }
 
 }
