--- a/src/components/projects/projects.scss
+++ b/src/components/projects/projects.scss
@@ -1,3 +1,5 @@
+@import "../../app.scss"; // import mobile style 
+
 .projects {
     position: relative;
 
@@ -11,6 +13,11 @@
         font-size: 36px;
 
         h1 {}
+
+        @include mobile {
+            padding-top: calc(100vh - 100px);
+            font-size: 24px;
+        }
 
         .progressBar {
             height: 10px;
@@ -26,7 +33,6 @@
         height: 100%;
         overflow: hidden;
 
-
         .wrapper {
             max-width: 1366px;
             height: 100%;
@@ -36,15 +42,29 @@
             justify-content: center;
             gap: 50px;
 
+            @include mobile {
+                flex-direction: column;
+            }
+
             .imageContainer {
                 flex: 1;
                 height: 50%;
+
+                @include mobile {
+                    width: 100%;
+                    max-width: 300px;
+                }
             }
 
             img {
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
+
+                @include mobile {
+                    object-fit: contain;
+                }
+
             }
 
             img:hover {
@@ -60,13 +80,29 @@
             flex-direction: column;
             gap: 30px;
 
+            @include mobile {
+                transform: none !important;
+                padding: 10px;
+                align-items: center;
+                text-align: center;
+            }
+
             h2 {
                 font-size: 72px;
+
+                @include mobile {
+                    font-size: 36px;
+                }
+
             }
 
             p {
                 color: gray;
                 font-size: 20px;
+
+                @include mobile {
+                    font-size: 16px;
+                }
             }
 
             button {
