--- a/src/components/yeeunchoi/yeeunchoi.scss
+++ b/src/components/yeeunchoi/yeeunchoi.scss
@@ -1,3 +1,5 @@
+@import "../../app.scss"; // import mobile style 
+
 .yeeunchoi {
     height: calc(100vh - 100px);
     overflow: hidden;
@@ -16,6 +18,14 @@
             justify-content: center;
             gap: 40px;
 
+            @include mobile {
+                height: 50%;
+                width: 100%;
+                gap: 20px;
+                align-items: center;
+                text-align: center;
+            }
+
         }
 
         h2 {
@@ -27,6 +37,11 @@
         h1 {
             color: olivedrab;
             font-size: 83px;
+
+
+            @include mobile {
+                font-size: 36px;
+            }
         }
 
         .buttons {
@@ -59,6 +74,20 @@
         position: absolute;
         top: 0;
         right: 0;
+
+        @include mobile {
+            height: 65%;
+            width: 100%;
+            top: unset;
+            bottom: 0;
+        }
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
     }
 
     .slidingTextContainer {
